Gnome: Fix unreadable text in calendar events

--- a/gtk-3.20/gtk.css
+++ b/gtk-3.20/gtk.css
@@ -5603,6 +5603,16 @@ headerbar .nautilus-window .path-bar-box .subtitle {
   border: 0;
   background-color: #eee; }
 
+/*******************
+ * Calendar events *
+********************/
+.color-light.timed label {
+  color: #1e1f29;
+  opacity: 1; }
+.week-view .color-light.timed label, .color-light label, .year-view .color-light:not(.timed) label {
+  color: #1e1f29;
+  opacity: 1; }
+
 /********
  * Gala *
  *******/
